<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="128dp"
            android:layout_height="184dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/operation_symbols" />

        <TextView
            android:id="@+id/textViewAppTitle"
            android:layout_width="60dp"
            android:layout_height="182dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/app_title"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="40sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/buttonLearnAddition"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/addition_blue"
                android:drawableEnd="@mipmap/addition_fg"
                android:fontFamily="casual"
                android:text="@string/learn_addition"
                android:textAllCaps="false"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonLearnSubtraction"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/subtraction_pink"
                android:drawableEnd="@mipmap/subtraction_fg"
                android:fontFamily="casual"
                android:text="@string/learn_subtraction"
                android:textAllCaps="false"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonLearnMultiplication"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/multiplication_orange"
                android:drawableEnd="@mipmap/multiplication_fg"
                android:fontFamily="casual"
                android:text="@string/learn_multiplication"
                android:textAllCaps="false"
                android:textSize="23sp" />

            <Button
                android:id="@+id/buttonLearnDivision"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/division_green"
                android:drawableEnd="@mipmap/division_fg"
                android:fontFamily="casual"
                android:text="@string/leanr_division"
                android:textAllCaps="false"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonAbout"
                style="@android:style/Widget.Button.Small"
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/creator_bg"
                android:drawableEnd="@mipmap/creator_fg"
                android:fontFamily="casual"
                android:text="@string/about"
                android:textAllCaps="false"
                android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>